--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -106,14 +106,14 @@
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/startTimerButton"
-                        style="@style/Widget.Material3.Button.Filled"
+                        style="?attr/materialButtonStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/dashboard_start" />
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/resetTimerButton"
-                        style="@style/Widget.Material3.Button.Outlined"
+                        style="?attr/materialButtonOutlinedStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
