--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -84,7 +84,7 @@
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/changeReminderButton"
-                        style="?attr/materialTextButtonStyle"
+                        style="@style/Widget.Material3.Button.TextButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/settings_change_time" />
