--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="subject_blue">#3F51B5</color>
+    <color name="subject_green">#2E7D32</color>
+    <color name="subject_amber">#FF8F00</color>
+    <color name="subject_purple">#8E24AA</color>
+    <color name="subject_teal">#00695C</color>
+    <color name="subject_red">#C62828</color>
+    <color name="analytics_line">#2962FF</color>
 </resources>
