--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -102,6 +102,13 @@
                     android:layout_marginTop="12dp"
                     android:text="@string/settings_enable_notifications" />
 
+                <com.google.android.material.materialswitch.MaterialSwitch
+                    android:id="@+id/wellnessSwitch"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/settings_enable_wellness" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
